[package]
name = "face-tracker-mouse-control-rs"
version = "0.1.0"
authors = ["Tim Yuen <timothy.yuen22@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.5.0", features = ["full"]}
byteorder = "1.4.3"
enigo = "0.0.14"
glam = "0.14.0"
